<resources>
    <string name="app_name">Chronos</string>
    <string name="rewards">Rewards</string>
    <string name="play_games_nearn_rewards">Play Games.\nEarn Rewards</string>
    <string name="log_in">Log in</string>
    <string name="default_username">User21</string>
    <string name="default_userid">ID: 193862518</string>
    <string name="default_points">0</string>
    <string name="title_redeem_btn">REDEEM</string>
    <string name="create_new_account">Create new account</string>
    <string name="login">Log in</string>
    <string name="play_earn_redeem">Play. Earn. Redeem.</string>
    <string name="chronos_hub">Chronos Hub</string>
    <string name="invite_and_earn"><![CDATA[Invite & Earn]]></string>
    <string name="invite_friends_and_earn"><![CDATA[Invite Friends & Earn]]></string>
    <string name="earn_xxx_coins_per_invite">Earn +xxx Coins per invite</string>
    <string name="default_referral_id">Xsdwre</string>
    <string name="choose_rewards_activities"><![CDATA[Choose Rewards & Activities]]></string>
    <string name="title_daily_task_rewards">Daily Task\nRewards</string>
    <string name="title_earn_daily_coins">Earn Daily Coins</string>
    <string name="default_coins">0 coin</string>
    <string name="proceed">PROCEED</string>
    <string name="newbie_task_section">Newbie Task Section</string>
    <string name="top_survey_social_media_task"><![CDATA[Top Survey & Social Media Task]]></string>
    <string name="beginner_friendly_high_reward_process">Beginner friendly high reward process.</string>
    <string name="start_now">Start Now</string>
    <string name="top_3_high_paying_games">Top 3 High Paying Games</string>
    <string name="default_top_3_card_title">Chronos Hub: Rewarding</string>
    <string name="default_top_3_card_coins">0 coin</string>
    <string name="header_title">Activity</string>
    <string name="default_value_rank_leaderboard">0</string>
    <string name="keep_playing_to_rank_up">Keep playing to rank up!</string>
    <string name="default_points_leaderboard">0 pt</string>
    <string name="top_10">Top 10</string>
    <string name="champion">Champion</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="user1">User1</string>
    <string name="user2">User2</string>
    <string name="user3">User3</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_wallet">Wallet</string>
    <string name="bottom_profile">Profile</string>
    <string name="bottom_settings">Settings</string>
    <string name="daily_task">Daily Task</string>
    <string name="earn_rewards">Earn Rewards</string>
    <string name="claim_daily_reward">Watch Ad to earn 30 coins</string>
    <string name="you_earned">You earned</string>
    <string name="check_in">Check in</string>
    <string name="you_ve_checkd_in_for">You’ve checked in for</string>
    <string name="watch">Watch</string>
    <string name="watch_ads">Watch Ads</string>
    <string name="today">Today</string>
</resources>