<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:title="@string/bottom_home"
        android:icon="@android:drawable/ic_menu_today"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_wallet"
        android:title="@string/bottom_wallet"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_profile"
        android:title="@string/bottom_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/bottom_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />

</menu>