<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_vertical_gradient"
    android:paddingHorizontal="18dp"
    android:paddingTop="8dp"
    android:paddingBottom="50dp"
    >

    <include
        android:id="@+id/header_section"
        layout="@layout/back_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_section">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/SectionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/you_earned"
                android:textColor="@color/color_secondary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalPoints"
                style="@style/SectionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/default_points"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="1dp"
            app:strokeColor="@color/stroke"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_top"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/check_in"
                    android:textAppearance="?textAppearanceBodyLargeEmphasized"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/daysCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/you_ve_checkd_in_for"
                    android:textAppearance="?textAppearanceBodyLargeEmphasized"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/checkinRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="8dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_checkin_card" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="14dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="0dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingVertical="10dp"
                    android:text="@string/claim_daily_reward"
                    android:textAllCaps="false"
                    android:textAppearance="?textAppearanceLabelLargeEmphasized"
                    android:textSize="16sp"
                    app:backgroundTint="?colorSecondary"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/left"
                    app:iconGravity="textEnd"
                    app:iconPadding="8dp"
                    app:iconTint="@color/white" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            style="@style/SectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/earn_rewards" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rewardsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_daily_rewards_card" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>